--- a/pfclm_ms/src/amps/mpi1/Makefile.linux.pftomp
+++ b/pfclm_ms/src/amps/mpi1/Makefile.linux.pftomp
@@ -11,10 +11,12 @@
 .SUFFIXES:
 .SUFFIXES: .c .F .F90 .o 
 
-INTERNAL_FLAGS = -DAMPS_F2CLIB_FIX -I/include -I$(PARFLOW_SRC)/amps/mpi1 -DAMPS_BSD_TIME -DAMPS_BYTE_SWAP -DAMPS_SPLIT_FFILE -DAMPS_PRINT_HOSTNAME -DAMPS_UNISTD
+INTERNAL_FLAGS = -DAMPS_F2CLIB_FIX -I/include -I$(PARFLOW_SRC)/amps/mpi1 -I$(PARFLOW_SRC)/pflib -DAMPS_BSD_TIME -DAMPS_BYTE_SWAP -DAMPS_SPLIT_FFILE -DAMPS_PRINT_HOSTNAME -DAMPS_UNISTD
 
-INTERNAL_LIBS = $(PARFLOW_SRC)/lib/amps.mpi1.linux.a \
-        $(SUNDIALS_LIBS) $(PARFLOW_SRC)/lib/clm.a -lm
+INTERNAL_LIBS = \
+	      $(PARFLOW_SRC)/lib/parflow.linux.a \
+	      $(PARFLOW_SRC)/lib/amps.mpi1.linux.a \
+	      $(PARFLOW_SRC)/lib/clm.a
 
 NODE_OBJ1 = ${PF_SRC:.c=.o}
 NODE_OBJ = ${NODE_OBJ1:.F=.o}
@@ -25,9 +27,9 @@ NODE_OBJ = ${NODE_OBJ1:.F=.o}
 .F.o:
 	$(PF_NODE_F77) -o $@ -c $(FFLAGS) $<
 
-$(PF_PROGRAM).$(PF_NODE_EXT): $(NODE_OBJ) $(XDIR) $(PF_DEPEND) \
-	$(PARFLOW_SRC)/lib/amps.mpi1.linux.a 
-	$(PF_NODE_CC) -DRSL_SYNCIO $(LFLAGS) -o $(PF_PROGRAM).$(PF_NODE_EXT) $(NODE_OBJ) -L$(SUNDIALS_LIB_DIR) ${INTERNAL_LIBS} ${PF_NODE_LIBS}  
+$(PF_PROGRAM).$(PF_NODE_EXT): $(NODE_OBJ) $(XDIR) $(PF_DEPEND) $(INTERNAL_LIBS)
+	$(PF_NODE_CC) -DRSL_SYNCIO $(LFLAGS) -o $(PF_PROGRAM).$(PF_NODE_EXT) $(NODE_OBJ) -L$(SUNDIALS_LIB_DIR) ${INTERNAL_LIBS} $(SUNDIALS_LIBS) \
+	${PF_NODE_LIBS}   -lm
 
 $(PF_LIBNAME).a: $(NODE_OBJ) Makefile
 	$(AR) ru $(PF_LIBNAME).a $(NODE_OBJ)
