--- a/pfclm_ms/src/parflow/build
+++ b/pfclm_ms/src/parflow/build
@@ -73,6 +73,8 @@ cd $PARFLOW_SRC/parflow
 #=============================================================================
 . $PARFLOW_SRC/config/getarch
 
+args=$*
+
 #=============================================================================
 #
 # Parse the user arguments
@@ -138,7 +140,7 @@ echo "       Make Options:           $PF_MAKE_OPTS"
 # Each communications package has its own special one.
 # We source it so it inherits all variables.
 #=============================================================================
-. $PARFLOW_SRC/amps/$PF_COMM/build.program	
+. $PARFLOW_SRC/amps/$PF_COMM/build.program $args
 
 echo "done"
 exit 0
