Minor build modifications && Added missing files to pfundist
git-svn-id: https://parflow.svn.cloudforge.com/parflow/pfclm_ms@31 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/branches/smith84/pfclm_ms/src/parflow/build
+++ b/branches/smith84/pfclm_ms/src/parflow/build
@@ -140,6 +140,8 @@ echo "       Make Options:           $PF_MAKE_OPTS"
 # Each communications package has its own special one.
 # We source it so it inherits all variables.
 #=============================================================================
+#echo "SGS"
+#printenv > ~/parflow.env
 . $PARFLOW_SRC/amps/$PF_COMM/build.program $args
 
 echo "done"
