Setup build scripts for Atlas
git-svn-id: https://parflow.svn.cloudforge.com/parflow/pfclm_ms@37 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/branches/smith84/pfclm_ms/src/config/linux.mpi1.config
+++ b/branches/smith84/pfclm_ms/src/config/linux.mpi1.config
@@ -114,8 +114,18 @@ case "$CLUSTER" in
              SUNDIALS_LIBS="-lsundials_kinsol"
 
 	     PF_NODE_LIBS="-lifcore"
-             ;;
+	     ;;
+        atlas*)
+             PF_NODE_CC="mpicc"
+             PF_NODE_LINK="mpicc"
+             PF_NODE_F77="gfortran"
+             PF_NODE_F90="gfortran"
+	     PF_NODE_LIBS="-lgfortran"
 
+             PFTOOLS_CC="gcc -fPIC"
+
+             SUNDIALS_LIBS="-lsundials_kinsol"
+             ;;
         tux*)
 	     PF_NODE_CC="gcc"
 	     PF_NODE_LINK="gcc"
