--- a/branches/smith84/pfclm_ms/src/tools/Makefile
+++ b/branches/smith84/pfclm_ms/src/tools/Makefile
@@ -94,4 +94,5 @@ clean:
 
 veryclean: clean
 	@rm -f pfwell_cat pfwell_data gmstin2pfsrf gmssol2pfsol
+	@rm -f gmstinvertices projecttin gmstriangulate bgmsfem2pfsol
 
