--- a/pfclm_ms/src/amps/mpi1/Makefile.linux.pftomp
+++ b/pfclm_ms/src/amps/mpi1/Makefile.linux.pftomp
@@ -11,7 +11,7 @@
 .SUFFIXES:
 .SUFFIXES: .c .F .F90 .o 
 
-INTERNAL_FLAGS = -DAMPS_F2CLIB_FIX -I/include -I$(PARFLOW_SRC)/amps/mpi1 -I$(PARFLOW_SRC)/parflow_lib -DAMPS_BSD_TIME -DAMPS_BYTE_SWAP -DAMPS_SPLIT_FFILE -DAMPS_PRINT_HOSTNAME -DAMPS_UNISTD
+INTERNAL_FLAGS = -I/include -I$(PARFLOW_SRC)/amps/mpi1 -I$(PARFLOW_SRC)/parflow_lib -DAMPS_BSD_TIME -DAMPS_BYTE_SWAP -DAMPS_SPLIT_FFILE -DAMPS_PRINT_HOSTNAME -DAMPS_UNISTD
 
 INTERNAL_LIBS = \
 	      $(PARFLOW_SRC)/lib/parflow.linux.a \
