Updated tux config to use OpenMPI
git-svn-id: https://parflow.svn.cloudforge.com/parflow/pfclm_ms@55 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/branches/smith84/pfclm_ms/src/parflow_lib/Makefile
+++ b/branches/smith84/pfclm_ms/src/parflow_lib/Makefile
@@ -197,6 +197,6 @@ PF_DEPEND = \
 	well.h 
 
 clean: 
-	@/bin/rm -f $(PF_LIBNAME).a
+	@/bin/rm -f *$(PF_OEXT) *$(PF_EXT)
 
 include $(PARFLOW_SRC)/amps/$(PF_COMM)/Makefile.$(PF_ARCH).pftomp
