--- a/branches/smith84/pfclm_ms/src/config/linux.mpi1.config
+++ b/branches/smith84/pfclm_ms/src/config/linux.mpi1.config
@@ -127,20 +127,19 @@ case "$CLUSTER" in
              SUNDIALS_LIBS="-lsundials_kinsol"
              ;;
         tux*)
-	     PF_NODE_CC="gcc"
-	     PF_NODE_LINK="gcc"
-	     PF_NODE_F77="gfortran"
+	     PF_NODE_CC="mpicc"
+	     PF_NODE_LINK="mpicc"
+	     PF_NODE_F77="mpif77"
 
 	     PFTOOLS_SHLIB_LD="ld -shared"
 
-	     export MPIHOME=/nfs/apps/mpich/1.2.7p1
              PFTOOLS_INCLUDE="-I/usr/casc/eciton/tcl/tcl8.4.19/include -I/usr/casc/eciton/tcl/tk8.4.19/include -I/usr/X11R6/include/"
 
 	     PFTOOLS_LIBS="-lc -lm -L/usr/casc/eciton/tcl/tcl8.4.19/lib -ltcl8.4 -L/usr/X11R6/lib -lX11 -ldl"
 	     PFTOOLS_DEF=" -DAMPS_SPLIT_FFILE -DTOOLS_BYTE_SWAP -DAMPS_PRINT_HOSTNAME"
 
-	     PF_NODE_DEF="-g -DAMPS_BYTE_SWAP -DAMPS_MPICH -DAMPS_SPLIT_FFILE -DAMPS_MPI_SETHOME -I$MPIHOME/include -DAMPS_PRINT_HOSTNAME"
-	     PF_NODE_LIBS="-L$MPIHOME/lib -lmpich -lgfortran"
+	     PF_NODE_DEF="-g -DAMPS_BYTE_SWAP -DAMPS_MPICH -DAMPS_SPLIT_FFILE -DAMPS_MPI_SETHOME -DAMPS_PRINT_HOSTNAME"
+	     PF_NODE_LIBS="-lgfortran"
 	     export TEXINPUTS=:/home/smithsg/parflow/parflow/src/docs/lib//
 
 	     SUNDIALS_LIBS="-lsundials_kinsol"
