Fixed dependency problem by splitting amps into comman and specific libs
git-svn-id: https://parflow.svn.cloudforge.com/parflow/parflow@87 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/branches/smith84/src/amps/common/Makefile.in
+++ b/branches/smith84/src/amps/common/Makefile.in
@@ -31,10 +31,10 @@ OBJS = \
 	amps_wait.o \
 	signal.o 
 
-$(PARFLOW_LIB_DIR)/$(AMPS_LIB): $(OBJS)
-	@AR@ ru $(PARFLOW_LIB_DIR)/$(AMPS_LIB) $(OBJS)
+$(PARFLOW_LIB_DIR)/$(AMPS_COMMON_LIB): $(OBJS)
+	@AR@ ru $(PARFLOW_LIB_DIR)/$(AMPS_COMMON_LIB) $(OBJS)
 
-amps: $(PARFLOW_LIB_DIR)/$(AMPS_LIB)
+amps: $(PARFLOW_LIB_DIR)/$(AMPS_COMMON_LIB)
 
 clean:
 	$(PARFLOW_CLEAN)
