Need to have byte order in cflags
git-svn-id: https://parflow.svn.cloudforge.com/parflow/parflow@96 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/branches/smith84/pftools/config/Makefile.config.in
+++ b/branches/smith84/pftools/config/Makefile.config.in
@@ -37,16 +37,14 @@ PARFLOW_TOOLS_SHLIB_SUFFIX=.dylib
 
 PARFLOW_TOOLS_SHLIB_CFLAGS = 
 
-PARFLOW_TOOLS_INCLUDE="-I/usr/X11R6/include/"
+PARFLOW_TOOLS_INCLUDE=-I/usr/X11R6/include/
 
 # Need to link to the tk/tcl libs
 # tk/tcl libs need X11 and dynamic link stuff in dl
 #
 # PARFLOW_TOOLS_SHLIB_LD="ld -shared"
-PARFLOW_TOOLS_LIBS="-lc -lm -ltcl -ltcl -L/usr/X11R6/lib -lX11 -ldl"
-PARFLOW_TOOLS_DEF=" -DAMPS_SPLIT_FFILE -DTOOLS_BYTE_SWAP -DAMPS_PRINT_HOSTNAME"
-
-PF_NODE_DEF="-g -DAMPS_BYTE_SWAP -DAMPS_MPICH -DAMPS_SPLIT_FFILE -DAMPS_MPI_SETHOME -I$MPIHOME/include -DAMPS_PRINT_HOSTNAME"
+PARFLOW_TOOLS_LIBS=-lc -lm -ltcl -ltcl -L/usr/X11R6/lib -lX11 -ldl
+PARFLOW_TOOLS_DEF=-DAMPS_SPLIT_FFILE -DTOOLS_BYTE_SWAP -DAMPS_PRINT_HOSTNAME
 
 LIB_SUFFIX=@LIB_SUFFIX@
 
@@ -59,7 +57,7 @@ F77           = @F77@
 FFLAGS        = @F77_FLAGS@ $(FFLAGS_EXTRA)
 
 CC            = @CC@
-CFLAGS        = @C_FLAGS@ $(CFLAGS_EXTRA)
+CFLAGS        = @C_FLAGS@ $(CFLAGS_EXTRA) $(PARFLOW_TOOLS_DEF)
 
 CPPFLAGS      = @CPPFLAGS@ -I. \
 	      	-I$(PARFLOW_TOOLS_CONFIGURE_INCLUDE_DIR) \
