Use standard build targets
git-svn-id: https://parflow.svn.cloudforge.com/parflow/parflow@97 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/branches/smith84/parflow/amps/Makefile.in
+++ b/branches/smith84/parflow/amps/Makefile.in
@@ -8,13 +8,13 @@ SRCDIR	      =	@srcdir@
 SUBDIR        = amps
 OBJECT        = ..
 
-default: amps
+default: all
 
 include $(OBJECT)/config/Makefile.config
 
 SUBDIRS = common $(AMPS) 
 
-amps:
+all:
 	@for DIR in $(SUBDIRS); do if test -d $$DIR; then (cd $$DIR && $(MAKE) $@) ; fi || exit 1; done
 
 clean:
