--- a/branches/smith84/parflow/Makefile.in
+++ b/branches/smith84/parflow/Makefile.in
@@ -1,13 +1,12 @@
 ##
-## File:	Makefile.in
-## Package:	Parflow
 ## Copyright:	(c) 1997-2008 Lawrence Livermore National Security, LLC
 ## Revision:	$LastChangedRevision: 2219 $
 ## Modified:	$LastChangedDate: 2008-06-12 13:14:48 -0700 (Thu, 12 Jun 2008) $
-## Description:	makefile for the entire SAMRAI distribution
+##
+## Description:	makefile for the parflow library and executable
 ##
 
-default: parflowexe
+default: all
 
 include ./config/Makefile.config
 
@@ -19,18 +18,18 @@ OBJECT        = .
 
 SUBDIRS = amps parflow_lib parflow
 
-parflowexe:
-	( cd amps && $(MAKE) amps) || exit 1
-	( cd parflow_lib && $(MAKE) parflowlib) || exit 1
-	( cd parflow && $(MAKE) ) || exit 1
+all:
+	( cd amps && $(MAKE) all) || exit 1
+	( cd parflow_lib && $(MAKE) all) || exit 1
+	( cd parflow && $(MAKE) all ) || exit 1
 
-veryclean:
+veryclean: clean
 
 clean:
 	@for DIR in $(SUBDIRS); do if test -d $$DIR; then (cd $$DIR && $(MAKE) $@) ; fi || exit 1; done
 	@$(PARFLOW_CLEAN)
 
-install:
+install: all
 	$(INSTALL) -d -m 755 $(PARFLOW_INSTALL_DIR)/lib
 	$(INSTALL) -d -m 755 $(PARFLOW_INSTALL_DIR)/bin
 	for i in lib/*; do				        \
