--- a/branches/smith84/parflow/amps/common/Makefile.in
+++ b/branches/smith84/parflow/amps/common/Makefile.in
@@ -10,7 +10,7 @@ SUBDIR        = amps/common
 VPATH	      =	@srcdir@
 OBJECT        = ../..
 
-default: amps
+default: all
 
 include $(OBJECT)/config/Makefile.config
 
@@ -34,7 +34,7 @@ OBJS = \
 $(PARFLOW_LIB_DIR)/$(AMPS_COMMON_LIB): $(OBJS)
 	@AR@ ru $(PARFLOW_LIB_DIR)/$(AMPS_COMMON_LIB) $(OBJS)
 
-amps: $(PARFLOW_LIB_DIR)/$(AMPS_COMMON_LIB)
+all: $(PARFLOW_LIB_DIR)/$(AMPS_COMMON_LIB)
 
 clean:
 	$(PARFLOW_CLEAN)
