--- a/branches/smith84/parflow/configure.in
+++ b/branches/smith84/parflow/configure.in
@@ -289,6 +289,11 @@ else
 fi
 
 dnl
+dnl Check if BSD gettimeofday is present
+dnl
+CASC_CHECK_GETTIMEOFDAY
+
+dnl
 dnl Silo support
 dnl
 CASC_SUPPORT_SILO
