Added autoconf check for big endian
git-svn-id: https://parflow.svn.cloudforge.com/parflow/parflow@101 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/branches/smith84/parflow/config/parflow_config.h.in
+++ b/branches/smith84/parflow/config/parflow_config.h.in
@@ -25,6 +25,10 @@
 #undef CASC_HAVE_GETTIMEOFDAY
 #endif
 
+#ifndef CASC_HAVE_BIGENDIAN
+#undef CASC_HAVE_BIGENDIAN
+#endif
+
 /*
  * X11 libraries
  */
