--- a/parflow/config/parflow_config.h.in
+++ b/parflow/config/parflow_config.h.in
@@ -25,6 +25,10 @@
 #undef CASC_HAVE_GETTIMEOFDAY
 #endif
 
+#ifndef CASC_HAVE_BIGENDIAN
+#undef CASC_HAVE_BIGENDIAN
+#endif
+
 /*
  * X11 libraries
  */
