--- a/pftools/configure.in
+++ b/pftools/configure.in
@@ -258,6 +258,8 @@ CASC_SPLIT_LIBS_STRING(FLIBS,FLIBS_PATH,FLIBS_NAME)
 LIB_NAME="${LIB_NAME} ${FLIBS_NAME}"
 LIB_PATH="${LIB_PATH} ${FLIBS_PATH}"
 
+CASC_CHECK_BIGENDIAN
+
 dnl
 dnl Silo support
 dnl
