Added autoconf support for AMPS
git-svn-id: https://parflow.svn.cloudforge.com/parflow/parflow@103 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/branches/smith84/parflow/config/Makefile.config.in
+++ b/branches/smith84/parflow/config/Makefile.config.in
@@ -23,7 +23,7 @@ INSTALL	                        = sh $(PARFLOW)/config/install-sh
 PARFLOW_INSTALL_DIR	        = @INSTDIR@
 
 # SGS Fix this to be a configure option
-AMPS                            = mpi1
+AMPS                            = @AMPS@
 AMPS_DIR                        = amps/$(AMPS)
 
 AMPS_INCLUDE_DIR                = $(PARFLOW)/$(AMPS_DIR)
