--- a/parflow/config/parflow_config.h.in
+++ b/parflow/config/parflow_config.h.in
@@ -20,9 +20,20 @@
 #ifndef included_PARFLOW_config
 #define included_PARFLOW_config
 
+/*
+ * AMPS options
+ */
 #ifndef AMPS
 #undef AMPS
 #endif
+
+#ifndef AMPS_SPLIT_FILE
+#undef AMPS_SPLIT_FILE
+#endif
+
+/*
+ * Misc machine config options
+ */
 
 #ifndef CASC_HAVE_GETTIMEOFDAY
 #undef CASC_HAVE_GETTIMEOFDAY
