--- a/pftools/config/Makefile.config.in
+++ b/pftools/config/Makefile.config.in
@@ -44,7 +44,7 @@ PARFLOW_TOOLS_INCLUDE=-I/usr/X11R6/include/
 #
 # PARFLOW_TOOLS_SHLIB_LD="ld -shared"
 PARFLOW_TOOLS_LIBS=-lc -lm -ltcl -ltcl -L/usr/X11R6/lib -lX11 -ldl
-PARFLOW_TOOLS_DEF=-DAMPS_SPLIT_FFILE
+PARFLOW_TOOLS_DEF=
 
 LIB_SUFFIX=@LIB_SUFFIX@
 
