Added makefile support for seq version
git-svn-id: https://parflow.svn.cloudforge.com/parflow/parflow@105 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/branches/smith84/parflow/config/Makefile.config.in
+++ b/branches/smith84/parflow/config/Makefile.config.in
@@ -42,7 +42,9 @@ PARFLOW_CONFIGURE_INCLUDE_DIR   = $(OBJECT)/include
 PARFLOW_LIB_DIR                 = $(OBJECT)/lib
 PARFLOW_BIN_DIR                 = $(OBJECT)/bin
 
-PARFLOW_LIBS = -L$(PARFLOW_LIB_DIR) -lparflow -lamps -lamps_common
+AMPS_LIBS=@AMPS_LIBS@
+
+PARFLOW_LIBS = -L$(PARFLOW_LIB_DIR) -lparflow $(AMPS_LIBS)
 
 LIB_SUFFIX=@LIB_SUFFIX@
 
