--- a/parflow/config/Makefile.config.in
+++ b/parflow/config/Makefile.config.in
@@ -66,7 +66,7 @@ CPPFLAGS      = @CPPFLAGS@ -I. \
 
 AR	      = @AR@
 
-LDFLAGS       = @LD_FLAGS@ -L$(LIB_PARFLOW) @LIB_PATH@ $(LDFLAGS_EXTRA)
+LDFLAGS       = @LD_FLAGS@ -L$(PARFLOW_LIB_DIR) @LIB_PATH@ $(LDFLAGS_EXTRA)
 LDLIBS        = $(LDLIBS_EXTRA) @LIB_NAME@
 
 ######################################################################
