--- a/branches/smith84/pftools/config/Makefile.config.in
+++ b/branches/smith84/pftools/config/Makefile.config.in
@@ -31,9 +31,6 @@ PARFLOW_TOOLS_BIN_DIR                 = $(OBJECT)/bin
 
 PARFLOW_TOOLS_LIBS = -L$(PARFLOW_TOOLS_LIB_DIR) 
 
-PARFLOW_TOOLS_SHLIB_LD=ld -dylib
-PARFLOW_TOOLS_SHLIB_LIBS=-ltcl -lc
-PARFLOW_TOOLS_SHLIB_SUFFIX=.dylib
 
 PARFLOW_TOOLS_SHLIB_CFLAGS = 
 
@@ -43,7 +40,8 @@ PARFLOW_TOOLS_INCLUDE=-I/usr/X11R6/include/
 # tk/tcl libs need X11 and dynamic link stuff in dl
 #
 # PARFLOW_TOOLS_SHLIB_LD="ld -shared"
-PARFLOW_TOOLS_LIBS=-lc -lm -ltcl -ltcl -L/usr/X11R6/lib -lX11 -ldl
+#PARFLOW_TOOLS_LIBS=-lc -lm -ltcl -ltcl -L/usr/X11R6/lib -lX11 -ldl
+PARFLOW_TOOLS_LIBS= 
 PARFLOW_TOOLS_DEF=
 
 LIB_SUFFIX=@LIB_SUFFIX@
@@ -60,6 +58,7 @@ CC            = @CC@
 CFLAGS        = @C_FLAGS@ $(CFLAGS_EXTRA) $(PARFLOW_TOOLS_DEF)
 
 CPPFLAGS      = @CPPFLAGS@ -I. \
+	        @INC_PATH@ \
 	      	-I$(PARFLOW_TOOLS_CONFIGURE_INCLUDE_DIR) \
 		-I$(PARFLOW_TOOLS_INCLUDE_DIR) \
 		-I$(PARFLOW_INCLUDE_DIR) \
@@ -69,6 +68,10 @@ AR	      = @AR@
 
 LDFLAGS       = @LD_FLAGS@ -L$(LIB_PARFLOW_TOOLS) @LIB_PATH@ $(LDFLAGS_EXTRA)
 LDLIBS        = $(LDLIBS_EXTRA) @LIB_NAME@
+
+PARFLOW_TOOLS_SHLIB_SUFFIX=@SHLIB_SUFFIX@
+PARFLOW_TOOLS_SHLIB_LD=@SHLIB_LD@
+PARFLOW_TOOLS_SHLIB_LIBS=$(LDFLAGS) $(LDLIBS)
 
 ######################################################################
 # Rules used in all directories.
