--- a/pftools/config/Makefile.config.in
+++ b/pftools/config/Makefile.config.in
@@ -21,16 +21,15 @@ SHELL         = /bin/sh
 
 INSTALL	                        = sh @srcdir@/config/install-sh
 PARFLOW_INSTALL_DIR	        = @INSTDIR@
-
 PARFLOW_INCLUDE_DIR             = $(PARFLOW)/../parflow/parflow_lib
+PARFLOW_LIB_DIR                 = $(PARFLOW_INSTALL_DIR)/lib
 
 PARFLOW_TOOLS_INCLUDE_DIR             = $(PARFLOW)
 PARFLOW_TOOLS_CONFIGURE_INCLUDE_DIR   = $(OBJECT)/include
 PARFLOW_TOOLS_LIB_DIR                 = $(OBJECT)/lib
 PARFLOW_TOOLS_BIN_DIR                 = $(OBJECT)/bin
 
-PARFLOW_TOOLS_LIBS = -L$(PARFLOW_TOOLS_LIB_DIR) 
-
+PARFLOW_TOOLS_LIBS = -L$(PARFLOW_LIB_DIR) -lparflow
 
 PARFLOW_TOOLS_SHLIB_CFLAGS = 
 
@@ -39,10 +38,7 @@ PARFLOW_TOOLS_INCLUDE=-I/usr/X11R6/include/
 # Need to link to the tk/tcl libs
 # tk/tcl libs need X11 and dynamic link stuff in dl
 #
-# PARFLOW_TOOLS_SHLIB_LD="ld -shared"
 #PARFLOW_TOOLS_LIBS=-lc -lm -ltcl -ltcl -L/usr/X11R6/lib -lX11 -ldl
-PARFLOW_TOOLS_LIBS= 
-PARFLOW_TOOLS_DEF=
 
 LIB_SUFFIX=@LIB_SUFFIX@
 
@@ -55,7 +51,7 @@ F77           = @F77@
 FFLAGS        = @F77_FLAGS@ $(FFLAGS_EXTRA)
 
 CC            = @CC@
-CFLAGS        = @C_FLAGS@ $(CFLAGS_EXTRA) $(PARFLOW_TOOLS_DEF)
+CFLAGS        = @C_FLAGS@ $(CFLAGS_EXTRA) 
 
 CPPFLAGS      = @CPPFLAGS@ -I. \
 	        @INC_PATH@ \
@@ -71,7 +67,7 @@ LDLIBS        = $(LDLIBS_EXTRA) @LIB_NAME@
 
 PARFLOW_TOOLS_SHLIB_SUFFIX=@SHLIB_SUFFIX@
 PARFLOW_TOOLS_SHLIB_LD=@SHLIB_LD@
-PARFLOW_TOOLS_SHLIB_LIBS=$(LDFLAGS) $(LDLIBS)
+PARFLOW_TOOLS_SHLIB_LIBS=@SH_LIB_PATH@ $(PARFLOW_TOOLS_LIBS) @SH_LIB_NAME@ -lc
 
 ######################################################################
 # Rules used in all directories.
