Reintegrate darwin into build
git-svn-id: https://parflow.svn.cloudforge.com/parflow/parflow@111 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/branches/smith84/pftools/configure.in
+++ b/branches/smith84/pftools/configure.in
@@ -272,6 +272,10 @@ if test "${tcl_PREFIX+set}" = set; then
   LIB_PATH="$tcl_LIB_PATH $LIB_PATH"
   LIB_NAME="$tcl_LIB_NAME $LIB_NAME"
   INC_PATH="$tcl_INCLUDES $INC_PATH"
+
+  SH_LIB_PATH="$tcl_LIB_PATH $SH_LIB_PATH"
+  SH_LIB_NAME="$tcl_LIB_NAME $SH_LIB_NAME"
+  SH_INC_PATH="$tcl_INCLUDES $SH_INC_PATH"
   AC_DEFINE(HAVE_TCL,1,TCL library is available so use it)
 fi
 
@@ -346,6 +350,10 @@ AC_SUBST(SRCDIR_COMPILE_PREFIX)
 AC_SUBST(INC_PATH)
 AC_SUBST(LIB_PATH)
 AC_SUBST(LIB_NAME)
+
+AC_SUBST(SH_INC_PATH)
+AC_SUBST(SH_LIB_PATH)
+AC_SUBST(SH_LIB_NAME)
 
 dnl
 dnl Generate the output files.
