Added autoconf macro to detect -fpic flag
git-svn-id: https://parflow.svn.cloudforge.com/parflow/parflow@112 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/branches/smith84/pftools/configure.in
+++ b/branches/smith84/pftools/configure.in
@@ -326,6 +326,17 @@ AC_SUBST(SHLIB_SUFFIX)
 AC_SUBST(SHLIB_LD)
 
 dnl
+dnl Check some shared library building options
+dnl This would be better to replace with a full 
+dnl shared library building package but don't
+dnl have time just yet.
+dnl
+
+AX_C_CHECK_FLAG(-fpic,,,SHLIB_CFLAGS="-fpic",)	
+
+AC_SUBST(SHLIB_CFLAGS)
+
+dnl
 dnl Make all of the macro substitutions for the generated output files
 dnl
 
