--- a/branches/smith84/docs/amps_manual/Makefile
+++ b/branches/smith84/docs/amps_manual/Makefile
@@ -1,15 +1,27 @@
 MANUAL=amps_manual
 INSTALL_DIR = $(PARFLOW_HELP)/amps_manual
 
+LINK_FILES = do_online \
+	     inputps.tex \
+             html.sty \
+             html.perl \
+	     parflow.sty \
+             parflow.perl \
+             parflow.bib
+
 ONLINE_OPTS =\
  -show_section_numbers\
  -bottom_navigation
 
 FILES =\
- manual.tex
+ manual.tex \
+ version.tex
 
 
 all: manual.ps manual/manual.html
+
+version.tex : ../../parflow/parflow_lib/version.h
+	echo "\def\PFVersion{"`cut -d$ -f2 $PARFLOW_SRC/config/version.h`"}" > version.tex
 	
 manual.ps: manual.dvi
 	@dvips -o manual.ps manual
@@ -20,6 +32,11 @@ manual/manual.html: manual.dvi
 
 #	bibtex manual
 manual.dvi: Makefile $(FILES)
+	@for i in ${LINK_FILES}; do     \
+	   if [ ! -h $$i ] ; then    \
+	     ln -s ../lib/$$i . ;\
+	   fi \
+	done 
 	@latex manual
 	@bibtex manual
 	@makeindex manual.idx
@@ -44,6 +61,12 @@ clean:
 	@/bin/rm -f *.idx *.ilg *.ind
 
 veryclean: clean
+	@for i in ${LINK_FILES}; do     \
+	   if [ -h $$i ] ; then    \
+	    rm $$i ; \
+	   fi \
+	done 
+	@/bin/rm -f  version.tex
 	@/bin/rm -f  manual.ps
 	@/bin/rm -fr manual
 
