--- a/branches/smith84/pftools/config/Makefile.config.in
+++ b/branches/smith84/pftools/config/Makefile.config.in
@@ -19,7 +19,9 @@
 
 SHELL         = /bin/sh
 
-INSTALL	                        = sh @srcdir@/config/install-sh
+INSTALL	    = sh $(PARFLOW)/config/install-sh
+INSTDIR	    = @INSTDIR@
+
 PARFLOW_INSTALL_DIR	        = @INSTDIR@
 PARFLOW_INCLUDE_DIR             = $(PARFLOW)/../parflow/parflow_lib
 PARFLOW_LIB_DIR                 = $(PARFLOW_INSTALL_DIR)/lib
@@ -71,6 +73,7 @@ PARFLOW_TOOLS_SHLIB_LIBS=@SH_LIB_PATH@ $(PARFLOW_TOOLS_LIBS) @SH_LIB_NAME@ -lc
 # Rules used in all directories.
 ######################################################################
 
-PARFLOW_CLEAN=@$(RM) *.o *.ii *.int.c *.log *.log.* stamp-* core core.* stats -r ti_files ii_files
+PARFLOW_CLEAN=@$(RM) *.o *.ii *.int.c *.log *.log.* stamp-* core core.* stats -r ti_files ii_files *.aux *.bbl *.blg *.dvi *.log *.dlog *.toc *.idx *.ilg *.ind
+
 
 
