--- a/branches/smith84/parflow/parflow_lib/Makefile.in
+++ b/branches/smith84/parflow/parflow_lib/Makefile.in
@@ -165,6 +165,9 @@ all: $(PARFLOW_LIB_DIR)/$(PARFLOW_LIB)
 clean:
 	$(PARFLOW_CLEAN)
 
+veryclean: clean
+	@$(RM) Makefile
+
 include $(SRCDIR)/Makefile.depend
 
 
