--- a/branches/smith84/parflow/amps/mpi1/Makefile.in
+++ b/branches/smith84/parflow/amps/mpi1/Makefile.in
@@ -39,7 +39,10 @@ $(PARFLOW_LIB_DIR)/$(AMPS_LIB): $(OBJS)
 all: $(PARFLOW_LIB_DIR)/$(AMPS_LIB)
 
 clean:
-	$(PARFLOW_CLEAN)
+	@$(PARFLOW_CLEAN)
+
+veryclean: clean
+	@$(RM) Makefile
 
 include $(SRCDIR)/Makefile.depend
 
