Add lib to remove
git-svn-id: https://parflow.svn.cloudforge.com/parflow/parflow@132 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/branches/smith84/parflow/Makefile.in
+++ b/branches/smith84/parflow/Makefile.in
@@ -29,7 +29,7 @@ clean:
 
 veryclean: clean
 	@for DIR in $(SUBDIRS); do if test -d $$DIR; then (cd $$DIR && $(MAKE) $@) ; fi || exit 1; done
-	@$(RM) -fr include  autom4te.cache bin 	
+	@$(RM) -fr include  autom4te.cache bin lib
 	@$(RM) Makefile config/Makefile.config
 
 install: all
