SDS dataformat is HDF4 stuff...no longer supported
git-svn-id: https://parflow.svn.cloudforge.com/parflow/parflow@140 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/branches/smith84/pftools/config/parflow_config.h.in
+++ b/branches/smith84/pftools/config/parflow_config.h.in
@@ -54,9 +54,9 @@
  */
 
 // HDF is not working
-// #ifndef HAVE_HDF5
-// #undef HAVE_HDF5
-// #endif
+#ifndef HAVE_HDF5
+#undef HAVE_HDF5
+#endif
 
 /*
  * Silo 
